--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "type": "commonjs",
   "dependencies": {
     "autoprefixer": "^10.4.21",
+    "lucide-react": "^0.540.0",
     "next": "^14.2.5",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
